# LuminAIR

./: .all-contributorsrc  Cargo.toml  README.md
.github/workflows/: benchmark.yml
bench/: data.js
crates/air/: Cargo.toml  build.rs
crates/air/src/: lib.rs  pie.rs  preprocessed.rs  settings.rs  utils.rs
crates/air/src/components/: mod.rs
crates/air/src/components/add/: component.rs  table.rs  witness.rs
crates/air/src/components/contiguous/: component.rs  table.rs  witness.rs
crates/air/src/components/exp2/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/inputs/: components.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/less_than/: component.rs  table.rs  witness.rs
crates/air/src/components/lessthan/: component.rs  mod.rs  table.rs
crates/air/src/components/log2/: component.rs  table.rs  witness.rs
crates/air/src/components/lookups/: mod.rs
crates/air/src/components/lookups/exp2/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/lookups/log2/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/lookups/range_check/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/lookups/sin/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/max_reduce/: component.rs  table.rs  witness.rs
crates/air/src/components/mul/: component.rs  table.rs  witness.rs
crates/air/src/components/recip/: component.rs  table.rs  witness.rs
crates/air/src/components/rem/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/sin/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/sqrt/: component.rs  mod.rs  table.rs  witness.rs
crates/air/src/components/sum_reduce/: component.rs  table.rs  witness.rs
crates/graph/: Cargo.toml
crates/graph/benches/: ops.rs
crates/graph/src/: data.rs  graph.rs  lib.rs  settings.rs  utils.rs
crates/graph/src/op/: mod.rs  other.rs  prim.rs
crates/graph/src/tests/: expansions.rs  mod.rs  ops.rs
crates/prelude/: Cargo.toml
crates/prelude/src/: lib.rs  prelude.rs
crates/prover/: Cargo.toml
crates/prover/src/: lib.rs  prover.rs  serde.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs
crates/verifiers/rust/: Cargo.toml
crates/verifiers/rust/src/: verifier.rs
crates/verifiers/wasm/: Cargo.toml  README.md  build.sh  luminair_verifier_wasm.d.ts
crates/verifiers/wasm/mocks/: proof.json  settings.json
crates/verifiers/wasm/src/: lib.rs  utils.rs  verifier.rs
docs/: docs.json
docs/concepts/: operators.mdx
docs/contribute/: add-ops.mdx
docs/more/: roadmap.mdx
docs/web/: luminair-react.mdx  luminair-web.mdx
examples/black-schole-nn/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
examples/black-schole-nn/model/: export_weights.py  main.py  model.py
examples/black-schole-nn/src/: main.rs
examples/risk-assessment/: Cargo.toml  README.md
examples/risk-assessment/src/: main.rs  scenario.rs
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
luminair-react/: README.md  USAGE.md  package-lock.json  package.json
luminair-react/demo/: package-lock.json  package.json
luminair-react/demo/src/app/: page.tsx
luminair-react/src/components/: VerifyButton.tsx
luminair-react/src/styles/: globals.css
path/to/: luminair_claim.rs
ui/: .gitignore  .npmignore  package-lock.json  package.json  rollup.config.js  tailwind.config.js  tsconfig.json
ui/demo/: next.config.ts  package-lock.json  package.json
ui/demo/public/: graph.dot  proof
ui/demo/src/app/: page.tsx
ui/src/: index.ts  styles.ts
ui/src/components/: GraphVisualizer.tsx  ProofLabel.tsx  VerificationModal.tsx  VerifyBadge.tsx  VerifyButton.tsx
ui/src/components/ui/: dialog.tsx
ui/src/lib/: shared-styles.ts
