[workspace]
resolver = "2"
members = [
    "crates/air",
    "crates/graph",
    "crates/prover",
    "crates/utils",
    "crates/verifiers/rust",
    "crates/verifiers/wasm",
    "examples/*",
    "crates/prelude",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/raphaelDkhn/Luminair"
license = "MIT"

[workspace.dependencies]
stwo = { git = "https://github.com/starkware-libs/stwo", rev = "0790eba", features = [
    "parallel",
], default-features = false }
stwo-air-utils-derive = { git = "https://github.com/starkware-libs/stwo", rev = "0790eba" }
stwo-air-utils = { git = "https://github.com/starkware-libs/stwo", rev = "0790eba" }
luminal = { git = "https://github.com/raphaelDkhn/luminal.git", rev = "80ae0fd" }
numerair = { git = "https://github.com/gizatechxyz/NumerAir.git", rev = "bb75385" }
rayon = "1.10.0"
tracing = "0.1"
tracing-subscriber = "0.3"
typetag = "0.2.20"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0"
num-traits = "0.2.17"
bincode = "1.3"
uuid = { version = "1.0", features = ["js", "v4"] }
getrandom = { version = "0.2", features = ["js"] }

[profile.bench]
opt-level = 3
debug = false
lto = true

[profile.test]
inherits = "release"