[package]
name = "luminair_prover"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
luminair_air = { path = "../air" }
stwo.workspace = true
luminair_utils = { path = "../utils" }
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
