[package]
name = "simple"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
stwo-prover.workspace = true
luminal.workspace = true
luminair_graph = { path = "../../crates/graph" }
luminair_prover = { path = "../../crates/prover" }
luminair_verifier={ path = "../../crates/verifiers/rust"}