[package]
name = "luminair_verifier_wasm"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
luminair_air = { path = "../../air" }
stwo-prover.workspace = true
luminair_prover = { path = "../../prover" }
luminair_verifier = { path = "../rust" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = { version = "0.1", optional = true }
tracing = "0.1"
tracing-wasm = "0.2"
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
serde-wasm-bindgen = "0.4"
wee_alloc = { version = "0.4", optional = true }
uuid = { version = "1.0", features = ["js", "v4"] }
getrandom = { version = "0.2", features = ["js"] }

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[features]
default = ["console_error_panic_hook"]
web = []
no-sin-lookup = []
wee_alloc_feature = ["wee_alloc"]
